--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "concurrently \"npm:dev:server\" \"npm:dev:javascript\"",
     "dev:server": "node server/index.js",
-    "dev:javascript":"webpack --config webpack.dev.config.js --watch",
-
+    "dev:javascript": "webpack --config webpack.dev.config.js --watch",
     "production": "TODO: Will do the production compile commands later",
     "build": "webpack --config webpack.config.js"
   },
@@ -25,6 +24,7 @@
   "dependencies": {
     "concurrently": "^6.3.0",
     "express": "^4.17.1",
+    "phaser": "^3.55.2",
     "webpack": "^5.58.2",
     "webpack-cli": "^4.9.0"
   }
